syntax = "proto3";
package it.valeriovaudi.room.model;

option java_multiple_files = true;
option java_package = "it.valeriovaudi.room.model";

message CreateRoomInvitationRequest {
  string my_username = 1;
  string guest_username = 2;
}
message CreateRoomResponse {
  string room_id = 1;
}

message CreateRoomInvitationConfirmationRequest {
  string my_username = 1;
  string guest_username = 2;
}

service RoomService {

  rpc createNewRoomInvitation (CreateRoomInvitationRequest) returns (CreateRoomResponse) {}
  rpc createNewRoomInvitationConfirmation (CreateRoomInvitationConfirmationRequest) returns (CreateRoomResponse) {}

}